Fix testcase compatibility with jdk17